--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,19 @@
   "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app",
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -32,5 +45,4 @@
       "last 1 safari version"
     ]
   }
-}
 }
