--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -20,6 +22,19 @@
   "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app",
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -32,5 +47,4 @@
       "last 1 safari version"
     ]
   }
-}
 }
