--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.9.22",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "redux": "^4.0.5",
     "validator": "^13.1.1"
   },
   "devDependencies": {
