--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.26.0",
     "react-bootstrap": "^1.1.1",
+    "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
